--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -443,7 +443,8 @@
     }
    ],
    "source": [
-    "%pip install numpy --break-system-packages"
+    "%pip install numpy --break-system-packages\n",
+    "%pip install numpy"
    ]
   },
   {
@@ -1102,7 +1103,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1116,7 +1117,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
