Trying to add macro definition that works on ReviewNB

--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -39,10 +39,18 @@
     },
     {
       "cell_type": "raw",
-      "metadata": {},
+      "metadata": {
+        "vscode": {
+          "languageId": "raw"
+        }
+      },
       "source": [
         "\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-        "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}"
+        "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+        "\\(\n",
+        "   \\def\\myvec#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+        "   \\def\\mymatrix#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+        "\\)"
       ]
     },
     {
