--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -45,7 +45,17 @@
    },
    "source": [
     "\\providecommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+    "\\providecommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
     "\\(\n",
     "   \\def\\myvec#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
     "   \\def\\mymatrix#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
