Trying once more with the instructions of https://jupyterbook.org/en/stable/advanced/sphinx.html#sphinx-tex-macros

--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -56,10 +56,11 @@
     }
    },
    "source": [
-    "\\(\n",
-    "   \\def\\myvec#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "   \\def\\mymatrix#1{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\)"
+    "```{math}\n",
+    "\n",
+    "\\newcommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+    "\\newcommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
+    "```"
    ]
   },
   {
