Working version with jupyter book --pre

--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# About this Notebook\n",
+    "# A quick Python refresher\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
@@ -55,13 +55,7 @@
      "languageId": "raw"
     }
    },
-   "source": [
-    "```{math}\n",
-    "\n",
-    "\\newcommand{\\myvec}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "\\newcommand{\\mymatrix}[1]{{\\mathbf{\\boldsymbol{{#1}}}}}\n",
-    "```"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
