--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# About\n",
+    "# Forward Kinematics 1\n",
     "\n",
     "*License: CC-BY-NC-SA 4.0*\n",
     "\n",
