[lesson2_tutorial] Fixing typo in compositions of rotations in SO(3)

--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -759,7 +759,7 @@
         "Rb_c = sm.SO3().Rz(-pi/4)\n",
         "\n",
         "Rc = Ra * Ra_b * Rb_c\n",
-        "Rx.plot(frame='0', dims=[-1,1], color='black')\n",
+        "Rc.plot(frame='0', dims=[-1,1], color='black')\n",
         "print(f\"Rc={Rc.R}\")"
       ]
     },
