Adding %capcture to the first 3 lessons to clean up the output in the html version.

--- a/lesson1_tutorial.ipynb
+++ b/lesson1_tutorial.ipynb
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,17 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a)"
    ]
@@ -123,17 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of a = 10 and b = 5.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f'The value of a = {a} and b = {b}.')"
    ]
@@ -153,17 +137,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=15\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = a + b\n",
     "\n",
@@ -180,17 +156,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = a - b\n",
     "\n",
@@ -207,17 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=50\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = a * b\n",
     "\n",
@@ -234,17 +194,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=2.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = a / b\n",
     "\n",
@@ -261,17 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=100000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "c = a ** b\n",
     "\n",
@@ -289,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,17 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=2.154434690031884\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# n-th root using fractional exponent. Might be easier but most languages do not support a similar syntax\n",
     "c = a ** (1/n)\n",
@@ -363,17 +299,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=2.154434690031884\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# n-th root using exp/log\n",
     "from math import exp, log\n",
@@ -399,20 +327,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "phi=0.7853981633974483\n",
-      "s_phi=0.7071067811865475\n",
-      "c_phi=0.7071067811865476\n",
-      "t_phi=0.9999999999999999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from math import pi, sin, cos, tan\n",
     "\n",
@@ -440,59 +357,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: numpy in /opt/homebrew/lib/python3.12/site-packages (1.26.4)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.12 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.12 -m pip install --upgrade pip\u001b[0m\n",
-      "\u001b[1;31merror\u001b[0m: \u001b[1mexternally-managed-environment\u001b[0m\n",
-      "\n",
-      "\u001b[31m×\u001b[0m This environment is externally managed\n",
-      "\u001b[31m╰─>\u001b[0m To install Python packages system-wide, try brew install\n",
-      "\u001b[31m   \u001b[0m xyz, where xyz is the package you are trying to\n",
-      "\u001b[31m   \u001b[0m install.\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m If you wish to install a Python library that isn't in Homebrew,\n",
-      "\u001b[31m   \u001b[0m use a virtual environment:\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m python3 -m venv path/to/venv\n",
-      "\u001b[31m   \u001b[0m source path/to/venv/bin/activate\n",
-      "\u001b[31m   \u001b[0m python3 -m pip install xyz\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m If you wish to install a Python application that isn't in Homebrew,\n",
-      "\u001b[31m   \u001b[0m it may be easiest to use 'pipx install xyz', which will manage a\n",
-      "\u001b[31m   \u001b[0m virtual environment for you. You can install pipx with\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m brew install pipx\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m You may restore the old behavior of pip by passing\n",
-      "\u001b[31m   \u001b[0m the '--break-system-packages' flag to pip, or by adding\n",
-      "\u001b[31m   \u001b[0m 'break-system-packages = true' to your pip.conf file. The latter\n",
-      "\u001b[31m   \u001b[0m will permanently disable this error.\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m If you disable this error, we STRONGLY recommend that you additionally\n",
-      "\u001b[31m   \u001b[0m pass the '--user' flag to pip, or set 'user = true' in your pip.conf\n",
-      "\u001b[31m   \u001b[0m file. Failure to do this can result in a broken Homebrew installation.\n",
-      "\u001b[31m   \u001b[0m \n",
-      "\u001b[31m   \u001b[0m Read more about this behavior here: <https://peps.python.org/pep-0668/>\n",
-      "\n",
-      "\u001b[1;35mnote\u001b[0m: If you believe this is a mistake, please contact your Python installation or OS distribution provider. You can override this, at the risk of breaking your Python installation or OS, by passing --break-system-packages.\n",
-      "\u001b[1;36mhint\u001b[0m: See PEP 668 for the detailed specification.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture\n",
     "%pip install numpy --break-system-packages\n",
     "%pip install numpy"
    ]
@@ -510,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,17 +401,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "v=[[1 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -566,18 +427,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "u=[[1]\n",
-      " [2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -599,17 +451,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -633,17 +477,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=2.23606797749979\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -671,21 +507,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A=[[1 2]\n",
-      " [3 4]],\n",
-      "\n",
-      "B=[[5 6]\n",
-      " [7 8]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -708,18 +532,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C=[[1 3]\n",
-      " [2 4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -739,18 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C=[[ 6  8]\n",
-      " [10 12]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -770,18 +576,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C=[[-4 -4]\n",
-      " [-4 -4]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -808,18 +605,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C=[[19 22]\n",
-      " [43 50]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -844,20 +632,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=[[1 2]\n",
-      " [2 4]],\n",
-      "\n",
-      "d=[[5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -882,19 +659,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c=[[ 5]\n",
-      " [11]],\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -923,19 +690,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "D=[[1 0 0]\n",
-      " [0 2 0]\n",
-      " [0 0 3]].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -964,19 +721,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "I_3=[[1. 0. 0.]\n",
-      " [0. 1. 0.]\n",
-      " [0. 0. 1.]].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -1007,19 +754,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "O_3=[[0. 0. 0.]\n",
-      " [0. 0. 0.]\n",
-      " [0. 0. 0.]].\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np \n",
     "\n",
@@ -1040,52 +777,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: roboticstoolbox-python in /opt/homebrew/lib/python3.12/site-packages (1.1.1)\n",
-      "Requirement already satisfied: numpy>=1.17.4 in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.26.4)\n",
-      "Requirement already satisfied: spatialmath-python>=1.1.5 in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.1.13)\n",
-      "Requirement already satisfied: spatialgeometry>=1.0.0 in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.1.0)\n",
-      "Requirement already satisfied: pgraph-python in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (0.6.3)\n",
-      "Requirement already satisfied: scipy in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.15.1)\n",
-      "Requirement already satisfied: matplotlib in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (3.5.1)\n",
-      "Requirement already satisfied: ansitable in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (0.11.4)\n",
-      "Requirement already satisfied: swift-sim>=1.0.0 in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.1.0)\n",
-      "Requirement already satisfied: rtb-data in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.0.1)\n",
-      "Requirement already satisfied: progress in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (1.6)\n",
-      "Requirement already satisfied: typing-extensions in /opt/homebrew/lib/python3.12/site-packages (from roboticstoolbox-python) (4.12.2)\n",
-      "Requirement already satisfied: pre-commit in /opt/homebrew/lib/python3.12/site-packages (from spatialmath-python>=1.1.5->roboticstoolbox-python) (4.1.0)\n",
-      "Requirement already satisfied: cycler>=0.10 in /opt/homebrew/lib/python3.12/site-packages (from matplotlib->roboticstoolbox-python) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /opt/homebrew/lib/python3.12/site-packages (from matplotlib->roboticstoolbox-python) (4.55.7)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /opt/homebrew/lib/python3.12/site-packages (from matplotlib->roboticstoolbox-python) (1.4.8)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/user/Library/Python/3.12/lib/python/site-packages (from matplotlib->roboticstoolbox-python) (24.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /opt/homebrew/lib/python3.12/site-packages (from matplotlib->roboticstoolbox-python) (11.1.0)\n",
-      "Requirement already satisfied: pyparsing>=2.2.1 in /opt/homebrew/lib/python3.12/site-packages (from matplotlib->roboticstoolbox-python) (3.2.1)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/user/Library/Python/3.12/lib/python/site-packages (from matplotlib->roboticstoolbox-python) (2.9.0.post0)\n",
-      "Requirement already satisfied: websockets in /opt/homebrew/lib/python3.12/site-packages (from swift-sim>=1.0.0->roboticstoolbox-python) (14.2)\n",
-      "Requirement already satisfied: colored in /opt/homebrew/lib/python3.12/site-packages (from ansitable->roboticstoolbox-python) (2.2.5)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/user/Library/Python/3.12/lib/python/site-packages (from python-dateutil>=2.7->matplotlib->roboticstoolbox-python) (1.16.0)\n",
-      "Requirement already satisfied: cfgv>=2.0.0 in /opt/homebrew/lib/python3.12/site-packages (from pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (3.4.0)\n",
-      "Requirement already satisfied: identify>=1.0.0 in /opt/homebrew/lib/python3.12/site-packages (from pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (2.6.6)\n",
-      "Requirement already satisfied: nodeenv>=0.11.1 in /opt/homebrew/lib/python3.12/site-packages (from pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (1.9.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /opt/homebrew/lib/python3.12/site-packages (from pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (6.0.2)\n",
-      "Requirement already satisfied: virtualenv>=20.10.0 in /opt/homebrew/lib/python3.12/site-packages (from pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (20.29.1)\n",
-      "Requirement already satisfied: distlib<1,>=0.3.7 in /opt/homebrew/lib/python3.12/site-packages (from virtualenv>=20.10.0->pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (0.3.9)\n",
-      "Requirement already satisfied: filelock<4,>=3.12.2 in /opt/homebrew/lib/python3.12/site-packages (from virtualenv>=20.10.0->pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (3.17.0)\n",
-      "Requirement already satisfied: platformdirs<5,>=3.9.1 in /Users/user/Library/Python/3.12/lib/python/site-packages (from virtualenv>=20.10.0->pre-commit->spatialmath-python>=1.1.5->roboticstoolbox-python) (4.3.6)\n",
-      "\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m A new release of pip is available: \u001b[0m\u001b[31;49m24.3.1\u001b[0m\u001b[39;49m -> \u001b[0m\u001b[32;49m25.0\u001b[0m\n",
-      "\u001b[1m[\u001b[0m\u001b[34;49mnotice\u001b[0m\u001b[1;39;49m]\u001b[0m\u001b[39;49m To update, run: \u001b[0m\u001b[32;49mpython3.12 -m pip install --upgrade pip\u001b[0m\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "%%capture\n",
+    "%pip install roboticstoolbox-python\n",
     "%pip install roboticstoolbox-python --break-system-packages"
    ]
   }
