--- a/lesson2_tutorial.ipynb
+++ b/lesson2_tutorial.ipynb
@@ -66,6 +66,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "%%capture\n",
         "%pip install roboticstoolbox-python\n",
         "%pip install roboticstoolbox-python --break-system-packages"
       ]
