--- a/lesson3_tutorial.ipynb
+++ b/lesson3_tutorial.ipynb
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%capture\n",
     "%pip install numpy\n",
     "%pip install numpy --break-system-packages\n",
     "%pip install roboticstoolbox-python\n",
