Starting to modify lesson 2 for DQs

--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -6,18 +6,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "% (C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "%\n",
-    "%     This file is licensed in the terms of the\n",
-    "%     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
-    "%     license.\n",
-    "%\n",
-    "% Derivative work of:\n",
-    "% https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
-    "% Contributors to this file:\n",
-    "%     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
-    "clear all;\n",
-    "close all;"
+    "%%capture\n",
+    "'''\n",
+    "(C) Copyright 2020-2025 Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "\n",
+    "     This file is licensed in the terms of the\n",
+    "     Attribution-NonCommercial-ShareAlike 4.0 International (CC BY-NC-SA 4.0)\n",
+    "     license.\n",
+    "\n",
+    " Derivative work of:\n",
+    " https://github.com/dqrobotics/learning-dqrobotics-in-matlab/tree/master/robotic_manipulators\n",
+    " Contributors to this file:\n",
+    "     Murilo Marques Marinho (murilomarinho@ieee.org)\n",
+    "'''"
    ]
   },
   {
