[lesson2] Fixed latex

--- a/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
+++ b/dqrobotics/lesson2/lesson_dq2_quaternion_basics.ipynb
@@ -89,17 +89,17 @@
     "The set of complex numbers $\\mathbb{C}$ ,  can be understood as an extention of the set of real numbers $\\mathbb{R}$ . Any complex number can always be written in the form\n",
     "\n",
     "\n",
-    "$$\\mathit{\\mathbf{c}}=a+b\\hat{\\;\\i \\;,}$$\n",
+    "$$\\mathit{\\mathbf{c}}=a+b\\hat{\\;\\imath \\;,}$$\n",
     "\n",
-    "where $a,b\\in \\;$ $\\mathbb{R}$ . In addition, the imaginary unit, $\\hat{\\;\\i \\;}$ has the following property\n",
+    "where $a,b\\in \\;$ $\\mathbb{R}$ . In addition, the imaginary unit, $\\hat{\\;\\imath \\;}$ has the following property\n",
     "\n",
     "\n",
-    "$${\\hat{\\;\\i \\;} }^2 =-1\\ldotp$$\n",
+    "$${\\hat{\\;\\imath \\;} }^2 =-1\\ldotp$$\n",
     "\n",
     "For instance, the complex number\n",
     "\n",
     "\n",
-    "$${\\mathit{\\mathbf{c}}}_1 =5+28\\hat{\\i \\;} \\;$$\n",
+    "$${\\mathit{\\mathbf{c}}}_1 =5+28\\hat{\\imath \\;} \\;$$\n",
     "\n",
     "can be written using DQ Robotics as follows.\n"
    ]
@@ -196,15 +196,15 @@
     "<a name=\"H_69A90DBD\"></a>\n",
     "### **Operations on complex numbers**\n",
     "\n",
-    "The operations on complex numbers are very similar to the operations on real numbers. We just need to respect the property ${\\hat{\\;\\i \\;} }^2 =-1\\ldotp$\n",
+    "The operations on complex numbers are very similar to the operations on real numbers. We just need to respect the property ${\\hat{\\;\\imath \\;} }^2 =-1\\ldotp$\n",
     "\n",
     "\n",
     "For instance, for the complex numbers\n",
     "\n",
     "\n",
-    "$$c_1 =a_1 +b_1 \\hat{\\i \\;}$$\n",
+    "$$c_1 =a_1 +b_1 \\hat{\\imath \\;}$$\n",
     "\n",
-    " $c_2 =a_2 +b_2 \\hat{\\i \\;}$ ,\n"
+    " $c_2 =a_2 +b_2 \\hat{\\imath \\;}$ ,\n"
    ]
   },
   {
@@ -256,7 +256,7 @@
     "<a name=\"H_03DC8E14\"></a>\n",
     "#### Sum/Subtraction\n",
     "\n",
-    "$$c_3 =c_1 +c_2 =\\left(a_1 +a_2 \\right)+\\left(b_1 +b_2 \\right)\\hat{\\;\\i \\;} \\ldotp$$"
+    "$$c_3 =c_1 +c_2 =\\left(a_1 +a_2 \\right)+\\left(b_1 +b_2 \\right)\\hat{\\;\\imath \\;} \\ldotp$$"
    ]
   },
   {
@@ -288,7 +288,7 @@
     "The subtraction is defined accordingly.\n",
     "\n",
     "\n",
-    "$${\\;c}_1 -c_2 =\\left(a_1 -a_2 \\right)+\\left(b_1 -b_2 \\right)\\hat{\\;\\i \\;} \\ldotp$$"
+    "$${\\;c}_1 -c_2 =\\left(a_1 -a_2 \\right)+\\left(b_1 -b_2 \\right)\\hat{\\;\\imath \\;} \\ldotp$$"
    ]
   },
   {
@@ -322,7 +322,7 @@
     "The product will be\n",
     "\n",
     "\n",
-    "$${\\;c}_1 c_2 =\\left(a_1 a_2 -b_1 b_2 \\right)+\\left(a_1 b_2 +b_1 a_2 \\right)\\hat{\\;\\i \\;}$$"
+    "$${\\;c}_1 c_2 =\\left(a_1 a_2 -b_1 b_2 \\right)+\\left(a_1 b_2 +b_1 a_2 \\right)\\hat{\\;\\imath \\;}$$"
    ]
   },
   {
@@ -356,7 +356,7 @@
     "The conjugate of a complex number is defined as\n",
     "\n",
     "\n",
-    "$${\\left(c_1 \\right)}^* =a-b\\hat{\\;\\i \\;}$$"
+    "$${\\left(c_1 \\right)}^* =a-b\\hat{\\;\\imath \\;}$$"
    ]
   },
   {
@@ -390,7 +390,7 @@
     "The norm of a complex number can be obtained as\n",
     "\n",
     "\n",
-    "$$\\left|\\right|c_1 \\left|\\right|=\\sqrt{c_1 c_1^* \\;}=\\sqrt{\\left(a_1 +b_1 \\hat{\\i \\;} \\right)\\left(a_1 -b_1 \\hat{\\i \\;} \\right)\\;}=\\sqrt{a_1^2 +b_1^2 }$$"
+    "$$\\left|\\right|c_1 \\left|\\right|=\\sqrt{c_1 c_1^* \\;}=\\sqrt{\\left(a_1 +b_1 \\hat{\\imath \\;} \\right)\\left(a_1 -b_1 \\hat{\\imath \\;} \\right)\\;}=\\sqrt{a_1^2 +b_1^2 }$$"
    ]
   },
   {
@@ -424,7 +424,7 @@
     "The imaginary part is\n",
     "\n",
     "\n",
-    "$$\\textrm{Im}\\left(c_1 \\right)=b\\hat{\\;\\i \\;}$$"
+    "$$\\textrm{Im}\\left(c_1 \\right)=b\\hat{\\;\\imath \\;}$$"
    ]
   },
   {
@@ -492,12 +492,12 @@
     "When we extend the concept of complex numbers to four dimensions, we have what we call quaternions. They compose the set $\\mathbb{H}$ and can always be written in the form\n",
     "\n",
     "\n",
-    "$$\\mathit{\\mathbf{h}}=a+b\\hat{\\;\\i \\;} +c\\hat{\\;\\j \\;} +d\\hat{\\;k}$$\n",
+    "$$\\mathit{\\mathbf{h}}=a+b\\hat{\\;\\imath \\;} +c\\hat{\\;\\jmath \\;} +d\\hat{\\;k}$$\n",
     "\n",
-    "where $a,b,c,d\\in \\;$ $\\mathbb{R}$ . In addition, the imaginary units $\\hat{\\;\\i \\;}$ , $\\hat{\\;\\j \\;}$ , and $\\hat{\\;k\\;}$ have the following properties\n",
+    "where $a,b,c,d\\in \\;$ $\\mathbb{R}$ . In addition, the imaginary units $\\hat{\\;\\imath \\;}$ , $\\hat{\\;\\jmath \\;}$ , and $\\hat{\\;k\\;}$ have the following properties\n",
     "\n",
     "\n",
-    "$${\\hat{\\;\\i \\;} }^2 ={\\hat{\\;\\j \\;} }^2 ={\\hat{\\;k} }^2 =\\hat{\\;\\i \\;} \\hat{\\;\\j \\;} \\hat{\\;k} =-1$$\n",
+    "$${\\hat{\\;\\imath \\;} }^2 ={\\hat{\\;\\jmath \\;} }^2 ={\\hat{\\;k} }^2 =\\hat{\\;\\imath \\;} \\hat{\\;\\jmath \\;} \\hat{\\;k} =-1$$\n",
     "\n",
     "Note that every complex number is a quaternion, but not every quaternion is a complex number ( $\\mathbb{C}\\subset \\mathbb{H}$ ).\n",
     "\n",
@@ -505,7 +505,7 @@
     "For instance, the quaternion\n",
     "\n",
     "\n",
-    "$${\\mathit{\\mathbf{c}}}_1 =5+28\\hat{\\i \\;} +85\\hat{\\;\\j \\;} +99\\hat{\\;k}$$\n",
+    "$${\\mathit{\\mathbf{c}}}_1 =5+28\\hat{\\imath \\;} +85\\hat{\\;\\jmath \\;} +99\\hat{\\;k}$$\n",
     "\n",
     "can be written using DQ Robotics as follows\n"
    ]
@@ -738,7 +738,7 @@
     "<a name=\"H_02F5F344\"></a>\n",
     "#### Sum/Subtraction\n",
     "\n",
-    "$${\\mathit{\\mathbf{h}}}_1 \\pm {\\mathit{\\mathbf{h}}}_2 =\\left(a_1 \\pm a_2 \\right)+\\left(b_1 \\pm b_2 \\right)\\hat{\\;\\i \\;} +\\left(c_1 \\pm c_2 \\right)\\hat{\\;\\j \\;} +\\left(d_1 \\pm d_2 \\right)\\hat{\\;k\\;}$$"
+    "$${\\mathit{\\mathbf{h}}}_1 \\pm {\\mathit{\\mathbf{h}}}_2 =\\left(a_1 \\pm a_2 \\right)+\\left(b_1 \\pm b_2 \\right)\\hat{\\;\\imath \\;} +\\left(c_1 \\pm c_2 \\right)\\hat{\\;\\jmath \\;} +\\left(d_1 \\pm d_2 \\right)\\hat{\\;k\\;}$$"
    ]
   },
   {
@@ -935,7 +935,7 @@
     "<a name=\"H_8ACC88AF\"></a>\n",
     "#### Imaginary part\n",
     "\n",
-    "$$\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)=b\\hat{\\;\\i \\;} +c\\hat{\\;\\j \\;} +d\\hat{\\;k}$$"
+    "$$\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)=b\\hat{\\;\\imath \\;} +c\\hat{\\;\\jmath \\;} +d\\hat{\\;k}$$"
    ]
   },
   {
@@ -966,7 +966,7 @@
     "<a name=\"H_2242E6F0\"></a>\n",
     "#### Conjugation\n",
     "\n",
-    "$${\\left({\\mathit{\\mathbf{h}}}_1 \\right)}^* =\\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1 \\right)-\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)=a-b\\hat{\\;\\i \\;} -c\\hat{\\;\\j \\;} -d\\hat{\\;k}$$"
+    "$${\\left({\\mathit{\\mathbf{h}}}_1 \\right)}^* =\\textrm{Re}\\left({\\mathit{\\mathbf{h}}}_1 \\right)-\\textrm{Im}\\left({\\mathit{\\mathbf{h}}}_1 \\right)=a-b\\hat{\\;\\imath \\;} -c\\hat{\\;\\jmath \\;} -d\\hat{\\;k}$$"
    ]
   },
   {
@@ -1215,7 +1215,7 @@
     "For instance, to represent the rotation of $\\frac{\\pi }{2}$ rad about the x-axis, the following quaternion can be used\n",
     "\n",
     "\n",
-    "$$r_1 =\\cos \\left(\\frac{\\;\\pi \\;}{4}\\right)+\\hat{\\;\\i \\;} \\sin \\left(\\frac{\\;\\pi \\;}{4}\\right)$$"
+    "$$r_1 =\\cos \\left(\\frac{\\;\\pi \\;}{4}\\right)+\\hat{\\;\\imath \\;} \\sin \\left(\\frac{\\;\\pi \\;}{4}\\right)$$"
    ]
   },
   {
@@ -1683,7 +1683,7 @@
     "7. Rotate ${\\mathit{\\mathbf{r}}}_5$ by ${360}^{\\circ \\;}$ about the x-axis and store it in ${\\mathit{\\mathbf{r}}}_6$ . Is ${\\mathit{\\mathbf{r}}}_5 =-{\\mathit{\\mathbf{r}}}_6$ ? Plot ${\\mathit{\\mathbf{r}}}_5$ and ${\\mathit{\\mathbf{r}}}_6$ to confirm that they represent the same rotation.\n",
     "<a name=\"T_B6A9D8F3\"></a>\n",
     "# <span style=\"color:rgb(213,80,0)\">Bonus Homework</span>\n",
-    "1.  What is the general form of the quaternion multiplication? Multiply ${\\mathit{\\mathbf{h}}}_1 =a_1 +b_1 \\hat{\\;\\i \\;} +c_1 \\hat{\\;\\j \\;} +d_1 \\hat{\\;k}$ and ${\\mathit{\\mathbf{h}}}_2 =a_2 +b_2 \\hat{\\;\\i \\;} +c_2 \\hat{\\;\\j \\;} +d_2 \\hat{\\;k}$ on pen and paper and find ${\\mathit{\\mathbf{h}}}_3 =a_3 +b_3 \\hat{\\;\\i \\;} +c_3 \\hat{\\;\\j \\;} +d_3 \\hat{\\;k}$ .\n",
+    "1.  What is the general form of the quaternion multiplication? Multiply ${\\mathit{\\mathbf{h}}}_1 =a_1 +b_1 \\hat{\\;\\imath \\;} +c_1 \\hat{\\;\\jmath \\;} +d_1 \\hat{\\;k}$ and ${\\mathit{\\mathbf{h}}}_2 =a_2 +b_2 \\hat{\\;\\imath \\;} +c_2 \\hat{\\;\\jmath \\;} +d_2 \\hat{\\;k}$ on pen and paper and find ${\\mathit{\\mathbf{h}}}_3 =a_3 +b_3 \\hat{\\;\\imath \\;} +c_3 \\hat{\\;\\jmath \\;} +d_3 \\hat{\\;k}$ .\n",
     "2. What is the general form of the quaternion norm? Simplify $\\sqrt{\\;{\\mathit{\\mathbf{h}}}_1 {\\mathit{\\mathbf{h}}}_1^* }$ on pen and paper.\n",
     "3. Show that every unit quaternion, written as $\\mathit{\\mathbf{r}}=\\cos \\left(\\frac{\\phi }{2}\\right)+\\textrm{vsin}\\left(\\frac{\\;\\phi \\;}{2}\\right)$ , has unit norm. Do that on pen and paper.\n"
    ]
